@@ -1,3 +1,12 @@
+2024-06-12T00:35:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9474721884 # 324
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-12
+* notice: last 14d: unq all: 3 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 671 1142 / 680 1151
+* notice: next accum: outdated-unq outdated-all / unq all: 672 1143 / 680 1151
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-05-28] / []
+
 2024-06-11T00:35:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9457607452 # 323
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-11
